--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,20 +7,28 @@
     box-shadow: 0px -1px 13px 4px rgba(0,0,0,0.75);
 }
 
+.nav-bar-img{
+    display: flex;
+    flex-wrap: wrap;
+}
 
-
-#titulo-principal{
-    text-align: center;
+.nav-bar-img img{
+    justify-content: start;
+}
+.nav-bar-img h1{
+    margin: 5rem 5rem 5rem 10rem;
+    text-decoration: none;
     text-transform: uppercase;
-    padding-top: 10rem;
+    font-family: cursive;
+    color: blue;
+    font-size: 5rem;
 
 }
 
 
 
-.barra-busqueda{
-    text-align: center;
-}
+
+
 
 .contenedor{
     max-width: 50rem;
@@ -45,9 +53,7 @@
     .nav-bar{
         flex-direction: row;
     }
-    .login{
-        flex-direction: row;
-    }
+    
 
  }
 .nav-bar a{
@@ -60,27 +66,7 @@
     font-size: 1.2rem;
     font-weight: 700;
 }
-.login{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: end;
 
-}
-.login a{
-    margin-right: 5rem;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 1rem;
-    color: black;
-    text-decoration:none;
-    font-size: 1.2rem;
-    font-weight: 700;
-}
-.login a:hover{
-    background-color: orange;
-    color: aliceblue;
-}
 .nav-bar a:hover{
     background-color: orange;
     color: aliceblue;
